# $Id$

2007-03-26	Konstantin V. Arkhipov

	* meta/types/: ranges support dropped.

	* main/Base/DateRange.class.php: split() ported to Date's usage.

	* test/core/DateRangeTest.class.php: more tests.

2007-03-25	Konstantin V. Arkhipov

	* main/Criteria/PropertyPath.class.php: useful utilities for path
	processing.

	* main/Criteria/Property.class.php: unused anyway, removed.

2007-03-23	Konstantin V. Arkhipov

	* main/DAOs/, meta/: mapping is now proto-based.

2007-03-22	Dmitry E. Demidov

	* main/Flow/PrototypedEditor.class.php: added method doTake.

2007-03-20	Dmitry E. Demidov

	* main/Flow/PrototypedEditor.class.php: added method dropObject,
	added form state checking after calling addObject/saveObject to 
	doSave/doAdd methods.

	* main/Flow/MethodMappedController.class.php: added method
	dropMethodMapping.

2007-03-20	Konstantin V. Arkhipov

	* main/UnifiedContainer/UnifiedContainer.class.php: fetched
	collection now excluded from serialization.

	* core/OSQL/QueryCombination.class.php: now implements MappableObject.

	* main/DAOs/Workers/: removed all childs of Voodoo-worker, so now
	handler's select configurable via
	VoodooDaoWorker::setDefaultHandler().

	* main/DAOs/Workers/: added FileSystemSegmentHandler as final
	fallback.

2007-03-19	Ivan Y. Khvostishkov

	* core/Form/Primitives/PrimitiveEnumeration.class.php: bugfix, value
	must be null on failed import.

2007-03-19	Konstantin V. Arkhipov

	* meta/: integrity checks implemented.

2007-03-16	Konstantin V. Arkhipov

	* core/OSQL/SelectQuery.class.php: aliases tracking implemented.

	* meta/: includes implemented.

2007-03-15	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: now accepts Criteria instance for
	filtering/ordering instead of OrderBy.

2007-03-14	Konstantin V. Arkhipov

	* meta/: stale files removing implemented.

2007-03-12	Konstantin V. Arkhipov

	* meta/: syntax checking for generated classes implemented.

2007-03-11	Konstantin V. Arkhipov
