@@ -1,5 +1,10 @@
 # $Id$
 
+2007-03-30	Konstantin V. Arkhipov
+
+	* core/Form/PlainForm.class.php,
+	core/Form/Primitives/BasePrimitive.class.php: getSafeValue added.
+
 2007-03-26	Konstantin V. Arkhipov
 
 	* meta/types/: ranges support dropped.
